--- a/latihan box model & gabungan float/web1.html
+++ b/latihan box model & gabungan float/web1.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="style/web1.css" />
   </head>
   <body>
+    <div class="top-bar">
+      <ul class="linked">
+        <li><a href="#">Home</a></li>
+        <li><a href="#ktiga">Prjocet</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
     <div class="container">
+      <a href="https://t.me/exyezetlanz" target="_blank" class="twitter"></a>
       <section class="header">
         <h1 class="judul">My website</h1>
         <ul>
@@ -47,7 +57,7 @@
             adipisci. Tempore necessitatibus excepturi repellat eos nostrum?
           </p>
 
-          <p>
+          <p id="ktiga">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor,
             nemo. Ducimus nisi quas perspiciatis sed fugiat ad aspernatur a
             tempore quisquam numquam, distinctio tempora odit iusto culpa
@@ -58,6 +68,7 @@
             laboriosam est, ratione inventore sequi eveniet sapiente alias! Cum
             modi deserunt, illo id obcaecati quaerat labore neque?
           </p>
+          <br /><br /><br /><br /><br /><br /><br /><br /><br />
         </div>
         <div class="sidebar">
           <h3>Tentang Penulis</h3>
